[package]
name = "rrk_wasm_fdw"
version = "0.4.15"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"
time = { version = "0.3", default-features = false }
regex = "1.11.1"

[package.metadata.component]
package = "enhancedlogic:rrk-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
